kubernetes/apps/prod/nas/xen/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xen
  namespace: nas
spec:
  type: ExternalName
  ports:
    - name: http
      port: 81
  externalName: ${XEN_IP}
