kubernetes/apps/prod/nas/xen/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: xen
  namespace: nas
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_XEN}.${DOMAIN}"
    gethomepage.dev/description: Xen Orchestra
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: xen-orchestra.png
    gethomepage.dev/app: xen  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Xen Orchestra"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOST_XEN}.${DOMAIN}`)
      kind: Rule
      priority: 1
      services:
        - name: xen
          port: 81
  tls:
    secretName: xen.${DOMAIN}
